--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,17 +6,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" >
 
   <div id="container">
-    <iframe src="assets/addtext/index.html" name="ebook-player" id="ebook-player"></iframe>
+    <iframe height="800px" width="100%"  src="../../assets/addtext/src/index.html" name="Add Text Plus"></iframe>
   </div>
-</ion-content>
-
-<ion-content padding>
 </ion-content>
